refaktor len graficky

--- a/app/src/main/res/drawable/oval_50_surface_input_field.xml
+++ b/app/src/main/res/drawable/oval_50_surface_input_field.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <solid
-        android:color="@color/Background"/>
+        android:color="@color/surfaceInputField"/>
 
     <size
         android:width="10dp"
