--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -13,7 +13,7 @@
 
         <ImageButton
             android:id="@+id/backButton"
-            style="@style/backButtonDark"
+            style="@style/backButtonOnBackground"
             android:contentDescription="@string/backCodeDescription" />
 
         <Button
@@ -35,7 +35,7 @@
                 android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:importantForAccessibility="no"
-                android:src="@drawable/baseline_account_circle_dark_24" />
+                android:src="@drawable/baseline_account_circle_on_background_24" />
 
             <TextView
                 android:id="@+id/firstNameLastName"
@@ -81,7 +81,7 @@
 
         <ImageButton
             android:id="@+id/closeEditPanel"
-            style="@style/closeButtonLeft"
+            style="@style/closeButtonLeftOnBackground"
             android:contentDescription="@string/closeCodeDescription" />
 
         <Button
@@ -108,7 +108,7 @@
                     android:layout_height="100dp"
                     android:layout_gravity="center"
                     android:importantForAccessibility="no"
-                    android:src="@drawable/baseline_account_circle_dark_24" />
+                    android:src="@drawable/baseline_account_circle_on_background_24" />
 
                 <ImageButton
                     android:id="@+id/editProfileImage"
@@ -118,7 +118,7 @@
                     android:layout_alignParentBottom="true"
                     android:background="@drawable/oval_50_primary"
                     android:contentDescription="@string/editImageCodeDescription"
-                    android:src="@drawable/baseline_edit_24" />
+                    android:src="@drawable/baseline_edit_on_primary_24" />
 
             </RelativeLayout>
 
@@ -204,7 +204,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:background="@drawable/bottom_layout_background"
+            android:background="@drawable/bottom_layout_background_on_primary"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -213,7 +213,7 @@
 
                 <ImageButton
                     android:id="@+id/closePasswordPanel"
-                    style="@style/closeButtonLeft"
+                    style="@style/closeButtonLeftOnBackground"
                     android:contentDescription="@string/closeCodeDescription" />
 
                 <Button
@@ -268,7 +268,7 @@
 
         <ImageButton
             android:id="@+id/closeFragmentButton"
-            style="@style/backButtonDark"
+            style="@style/backButtonOnBackground"
             android:contentDescription="@string/backCodeDescription" />
 
     </RelativeLayout>
