--- a/app/src/main/res/layout/classroom_list_item.xml
+++ b/app/src/main/res/layout/classroom_list_item.xml
@@ -17,7 +17,7 @@
 
         <ImageButton
             android:id="@+id/editClassroomButton"
-            style="@style/editButton"
+            style="@style/editButtonOnBackground"
             android:contentDescription="@string/editCodeDescription" />
     </RelativeLayout>
 
