--- a/app/src/main/res/layout/activity_classroom_groups.xml
+++ b/app/src/main/res/layout/activity_classroom_groups.xml
@@ -4,17 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Tertiary"
+    android:background="@color/Background"
     android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/mainPanel"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/Tertiary">
 
         <ImageButton
             android:id="@+id/backButton"
-            style="@style/backButton"
+            style="@style/backButtonOnPrimary"
             android:contentDescription="@string/backCodeDescription" />
 
         <TextView
@@ -64,7 +65,7 @@
 
         <ImageButton
             android:id="@+id/closeGroupPanel"
-            style="@style/backButtonDark"
+            style="@style/backButtonOnBackground"
             android:contentDescription="@string/closeCodeDescription" />
 
         <ScrollView
@@ -90,7 +91,7 @@
                         android:layout_height="100dp"
                         android:layout_gravity="center"
                         android:contentDescription="@string/groupsCodeDescription"
-                        android:src="@drawable/baseline_account_circle_dark_24" />
+                        android:src="@drawable/baseline_account_circle_on_background_24" />
 
                     <ImageButton
                         android:id="@+id/editGroupImage"
@@ -100,7 +101,7 @@
                         android:layout_alignParentBottom="true"
                         android:background="@drawable/oval_50_primary"
                         android:contentDescription="@string/editImageCodeDescription"
-                        android:src="@drawable/baseline_edit_24" />
+                        android:src="@drawable/baseline_edit_on_primary_24" />
 
                 </RelativeLayout>
 
@@ -156,7 +157,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="260dp"
-            android:background="@drawable/bottom_layout_background"
+            android:background="@drawable/bottom_layout_background_on_primary"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -165,7 +166,7 @@
 
                 <ImageButton
                     android:id="@+id/closeEditPanel"
-                    style="@style/closeButton"
+                    style="@style/closeButtonOnBackground"
                     android:contentDescription="@string/closeCodeDescription" />
             </RelativeLayout>
 
@@ -187,7 +188,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="260dp"
-            android:background="@drawable/bottom_layout_background"
+            android:background="@drawable/bottom_layout_background_on_primary"
             android:orientation="vertical">
 
             <TextView
@@ -231,7 +232,7 @@
 
         <ImageButton
             android:id="@+id/closeFragmentButton"
-            style="@style/backButtonDark"
+            style="@style/backButtonOnBackground"
             android:contentDescription="@string/backCodeDescription" />
 
     </RelativeLayout>
