--- a/app/src/main/res/layout/activity_classroom_students.xml
+++ b/app/src/main/res/layout/activity_classroom_students.xml
@@ -3,17 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Tertiary"
+    android:background="@color/Background"
     android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/mainPanel"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/Tertiary">
 
         <ImageButton
             android:id="@+id/backButton"
-            style="@style/backButton"
+            style="@style/backButtonOnPrimary"
             android:contentDescription="@string/backCodeDescription" />
 
         <TextView
@@ -64,7 +65,7 @@
 
         <ImageButton
             android:id="@+id/closeStudentPanel"
-            style="@style/backButtonDark"
+            style="@style/backButtonOnBackground"
             android:contentDescription="@string/closeCodeDescription" />
 
         <LinearLayout
@@ -87,7 +88,7 @@
                     android:layout_height="100dp"
                     android:layout_gravity="center"
                     android:importantForAccessibility="no"
-                    android:src="@drawable/baseline_account_circle_dark_24" />
+                    android:src="@drawable/baseline_account_circle_on_background_24" />
 
                 <ImageButton
                     android:id="@+id/editStudentImage"
@@ -97,7 +98,7 @@
                     android:layout_alignParentBottom="true"
                     android:background="@drawable/oval_50_primary"
                     android:contentDescription="@string/edit"
-                    android:src="@drawable/baseline_edit_24" />
+                    android:src="@drawable/baseline_edit_on_primary_24" />
 
             </RelativeLayout>
 
@@ -146,7 +147,7 @@
                     android:layout_marginTop="5dp"
                     android:backgroundTint="@color/transparent"
                     android:contentDescription="@string/generateCodeDescription"
-                    android:src="@drawable/baseline_renew_dark_24" />
+                    android:src="@drawable/baseline_renew_on_background_24" />
             </RelativeLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -154,7 +155,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:background="@drawable/oval_50_background"
+
                 android:clickable="true"
                 android:focusable="true"
                 android:focusableInTouchMode="false"
@@ -184,7 +185,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="260dp"
-            android:background="@drawable/bottom_layout_background"
+            android:background="@drawable/bottom_layout_background_on_primary"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -193,19 +194,19 @@
 
                 <ImageButton
                     android:id="@+id/closeEditPanel"
-                    style="@style/closeButton"
+                    style="@style/closeButtonOnBackground"
                     android:contentDescription="@string/closeCodeDescription" />
             </RelativeLayout>
 
             <Button
                 android:id="@+id/editButton"
-                style="@style/actionButton"
+                style="@style/actionButtonEdit"
                 android:layout_marginHorizontal="25dp"
                 android:text="@string/edit" />
 
             <Button
                 android:id="@+id/deleteButton"
-                style="@style/actionButton"
+                style="@style/actionButtonDelete"
                 android:layout_marginHorizontal="25dp"
                 android:text="@string/delete" />
         </LinearLayout>
@@ -219,7 +220,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="260dp"
-            android:background="@drawable/bottom_layout_background"
+            android:background="@drawable/bottom_layout_background_on_primary"
             android:orientation="vertical">
 
             <TextView
@@ -263,7 +264,7 @@
 
         <ImageButton
             android:id="@+id/closeFragmentButton"
-            style="@style/backButtonDark"
+            style="@style/backButtonOnBackground"
             android:contentDescription="@string/backCodeDescription" />
 
     </RelativeLayout>
