--- a/app/src/main/res/layout/activity_group_tasks.xml
+++ b/app/src/main/res/layout/activity_group_tasks.xml
@@ -4,17 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Tertiary"
+    android:background="@color/Background"
     android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/mainPanel"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/Tertiary">
 
         <ImageButton
             android:id="@+id/backButton"
-            style="@style/backButton"
+            style="@style/backButtonOnPrimary"
             android:contentDescription="@string/backCodeDescription" />
 
         <TextView
@@ -58,7 +59,7 @@
 
         <ImageButton
             android:id="@+id/closeTasksPanel"
-            style="@style/backButtonDark"
+            style="@style/backButtonOnBackground"
             android:contentDescription="@string/closeCodeDescription" />
 
         <ScrollView
@@ -111,7 +112,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="260dp"
-            android:background="@drawable/bottom_layout_background"
+            android:background="@drawable/bottom_layout_background_on_primary"
             android:orientation="vertical">
 
             <TextView
