--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -8,7 +8,7 @@
 
     <ImageButton
         android:id="@+id/backButton"
-        style="@style/backButtonDark"
+        style="@style/backButtonOnBackground"
         android:contentDescription="@string/backCodeDescription" />
 
     <LinearLayout
