--- a/app/src/main/res/layout/activity_task_type1.xml
+++ b/app/src/main/res/layout/activity_task_type1.xml
@@ -25,7 +25,7 @@
 
     <ImageButton
         android:id="@+id/backButton"
-        style="@style/backButtonDark"
+        style="@style/backButtonOnBackground"
         android:contentDescription="@string/backCodeDescription" />
 
     <ImageButton
@@ -36,7 +36,7 @@
         android:layout_marginVertical="50dp"
         android:backgroundTint="@color/transparent"
         android:contentDescription="@string/prevBoardCodeDescription"
-        android:src="@drawable/baseline_arrow_left_dark_24"
+        android:src="@drawable/baseline_arrow_left_on_background_24"
         android:visibility="gone" />
 
     <ImageButton
@@ -48,7 +48,7 @@
         android:layout_marginVertical="50dp"
         android:backgroundTint="@color/transparent"
         android:contentDescription="@string/nextBoardCodeDescription"
-        android:src="@drawable/baseline_arrow_right_dark_24"
+        android:src="@drawable/baseline_arrow_right_on_background_24"
         android:visibility="gone" />
 
     <LinearLayout
@@ -63,7 +63,7 @@
             android:layout_weight="1"
             android:backgroundTint="@color/transparent"
             android:contentDescription="@string/resetCodeDescription"
-            android:src="@drawable/baseline_replay_dark_24" />
+            android:src="@drawable/baseline_replay_on_background_24" />
 
         <ImageButton
             android:id="@+id/save"
@@ -72,7 +72,7 @@
             android:layout_weight="1"
             android:backgroundTint="@color/transparent"
             android:contentDescription="@string/saveCodeDescription"
-            android:src="@drawable/baseline_save_dark_24" />
+            android:src="@drawable/baseline_save_on_background_24" />
     </LinearLayout>
 
 
