--- a/app/src/main/res/layout/grid_x_list_item.xml
+++ b/app/src/main/res/layout/grid_x_list_item.xml
@@ -21,11 +21,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
-                android:layout_marginVertical="20dp" />
+                android:layout_marginVertical="20dp"
+                android:importantForAccessibility="no" />
 
             <ImageButton
                 android:id="@+id/delete"
-                style="@style/closeButton"
+                style="@style/closeButtonOnBackground"
                 android:layout_marginTop="-5dp"
                 android:layout_marginEnd="-5dp"
                 android:contentDescription="@string/deleteCodeDescription" />
