--- a/app/src/main/res/layout/grid_image_list_item.xml
+++ b/app/src/main/res/layout/grid_image_list_item.xml
@@ -1,29 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/outerLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:layout_margin="2dp">
 
     <RelativeLayout
-        android:id="@+id/outerLayout"
+        android:id="@+id/innerLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="2dp">
+        android:layout_height="90dp"
+        android:background="@drawable/oval_20_surface">
 
-        <RelativeLayout
-            android:id="@+id/innerLayout"
+        <ImageView
+            android:id="@+id/image"
             android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:background="@drawable/oval_20_surface">
-
-            <ImageView
-                android:id="@+id/image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true"
-                android:layout_marginHorizontal="10dp"
-                android:layout_marginVertical="10dp"
-                android:importantForAccessibility="no" />
-        </RelativeLayout>
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="10dp"
+            android:importantForAccessibility="no" />
     </RelativeLayout>
-</LinearLayout>
+</RelativeLayout>
