--- a/app/src/main/res/layout/grid_x_list_item.xml
+++ b/app/src/main/res/layout/grid_x_list_item.xml
@@ -1,44 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/outerLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:layout_margin="2dp">
 
     <RelativeLayout
-        android:id="@+id/outerLayout"
+        android:id="@+id/innerLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="2dp">
+        android:layout_height="130dp"
+        android:background="@drawable/oval_20_surface">
 
-        <RelativeLayout
-            android:id="@+id/innerLayout"
-            android:layout_width="match_parent"
-            android:layout_height="130dp"
-            android:background="@drawable/oval_20_surface">
-
-            <ImageView
-                android:id="@+id/image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginVertical="20dp"
-                android:importantForAccessibility="no" />
-
-            <ImageButton
-                android:id="@+id/delete"
-                style="@style/closeButtonOnBackground"
-                android:layout_marginTop="-5dp"
-                android:layout_marginEnd="-5dp"
-                android:contentDescription="@string/deleteCodeDescription" />
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/name"
+        <ImageView
+            android:id="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:text="@string/firstName" />
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="20dp"
+            android:importantForAccessibility="no" />
+
+        <ImageButton
+            android:id="@+id/delete"
+            style="@style/closeButtonOnBackground"
+            android:layout_marginTop="-5dp"
+            android:layout_marginEnd="-5dp"
+            android:contentDescription="@string/deleteCodeDescription" />
     </RelativeLayout>
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="@string/firstName" />
+</RelativeLayout>
